# wham

./: .gitignore  README.md  cp2stampede.sh  my_conf_cmd
wham-1.0/: BefeusTools.cpp  BefeusTools.h  Forces.h  Makefile  WHAM  WHAM.cpp  WHAMfunctions.cpp  WHAMfunctions.h  distributions.h  fileoptions.cpp  fileoptions.h
wham-1.0/test/: 1D_test.file.count  1D_test.file.mean  1D_test.file.prob  2D_test.file.2dcount  2D_test.file.2dmean  2D_test.file.2dprob  2D_test.file.count  2D_test.file.mean  2D_test.file.prob  2dprob.ps  mcDiff_Model.py  mcTest_Model.py  prob.p
wham-2.0/: .configure.ac.swo  .configure.ac.swp  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  example_conf  libtool  o-configure.ac
wham-2.0/autom4te.cache/: output.0  requests  traces.0
wham-2.0/m4/: ax_blas.m4  ax_openmp.m4  boost.m4
wham-2.0/src/: .parse_options.cpp.swp  Makefile  Makefile.am  Makefile.in  main.cpp  parse_options.cpp  parse_options.h  t_makefile  wham.cpp  wham.h  wham_befeus.cpp  wham_befeus.h  wham_fileutils.cpp  wham_fileutils.h  wham_functions.cpp  wham_functions.h  wham_hdf5.cpp  wham_hdf5.h  wham_trig.cpp  wham_trig.h  wham_types.h
wham-2.0/src/.deps/: main.Po  parse_options.Po  wham-main.Po  wham-parse_options.Po  wham-wham.Po  wham-wham_befeus.Po  wham-wham_fileutils.Po  wham-wham_functions.Po  wham-wham_hdf5.Po  wham-wham_trig.Po  wham.Po  wham_befeus.Po  wham_fileutils.Po  wham_functions.Po  wham_hdf5.Po  wham_trig.Po
wham-2.0/tests/include/: mcGenerate_Trajectory.py  mcTest_hdf5.py  read_hdf5.py
wham-2.0/tests/schemes/flat/: 1D_list.file  2D_list.file  flat.py
wham-2.0/tests/schemes/nobias/: nobias.py
wham-2.0/tests/schemes/quad/: 1D_list.file  1d.h5  2D_list.file  new_quad.py  quad.py
wham-2.0/tools/: Makefile  Makefile.am  Makefile.in  bw_boltzmann_weight.cpp  bw_boltzmann_weight.h  bw_hdf5.cpp  bw_hdf5.h  bw_hdf5.py  bw_main.cpp  bw_option_parser.cpp  bw_option_parser.h  bw_types.h
wham-2.0/tools/.deps/: bw_boltzmann_weight.Po  bw_hdf5.Po  bw_main.Po  bw_option_parser.Po  bw_wham-bw_boltzmann_weight.Po  bw_wham-bw_hdf5.Po  bw_wham-bw_main.Po  bw_wham-bw_option_parser.Po
